Implement authorization code request