@@ -23,13 +23,15 @@
     </developers>
 
     <properties>
+        <commons-io.version>2.11.0</commons-io.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-text.version>1.10.0</commons-text.version>
-        <google-auth.version>1.3.0</google-auth.version>
-        <google-api.version>1.35.0</google-api.version>
+        <google-auth.version>1.16.1</google-auth.version>
+        <google-api.version>2.2.0</google-api.version>
         <ikonli.version>12.3.1</ikonli.version>
         <java.version>20</java.version>
         <javafx.version>20</javafx.version>
+        <javax-annotation.version>1.3.2</javax-annotation.version>
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <logback.version>1.4.7</logback.version>
         <slf4j.version>2.0.7</slf4j.version>
@@ -63,6 +65,11 @@
             <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>${commons-text.version}</version>
@@ -87,6 +94,14 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${javax-annotation.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
@@ -116,6 +131,7 @@
                     <encoding>UTF-8</encoding>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -125,7 +141,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>de.perdian.apps.calendarhelper.fx.CalendarHelperLauncher</mainClass>
+                            <mainClass>de.perdian.apps.calendarhelper.CalendarHelperLauncher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -150,7 +166,7 @@
                         <configuration>
                             <plist>
                                 <CFBundleIconFile>src/bundle/macos/resources/calendar-regular.icns</CFBundleIconFile>
-                                <JVMMainClassName>de.perdian.apps.calendarhelper.fx.CalendarHelperLauncher</JVMMainClassName>
+                                <JVMMainClassName>de.perdian.apps.calendarhelper.CalendarHelperLauncher</JVMMainClassName>
                                 <JVMVersion>${java.version}+</JVMVersion>
                                 <JVMOptions>
                                     <string>-Dapple.laf.useScreenMenuBar=true</string>
